# iso-workspace

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: github-pages-sync.yml  rust-nodejs-cache.yml
css/: app.1db1aec2.css  chunk-vendors.bcd485e3.css  iso-3166-1.948d3a95.css  iso-4217.0516802b.css
js/: app.1bd578e8.js  app.1bd578e8.js.map  app.a51ecdcc.js  app.a51ecdcc.js.map  app.f5663ce7.js  app.f5663ce7.js.map  chunk-f7297160.23068c35.js  chunk-f7297160.23068c35.js.map  chunk-vendors.3d974637.js  chunk-vendors.3d974637.js.map  chunk-vendors.fa419c84.js  chunk-vendors.fa419c84.js.map  iso-3166-1.7d82705c.js  iso-3166-1.7d82705c.js.map  iso-3166-1.976a9fec.js  iso-3166-1.976a9fec.js.map  iso-3166-1~iso-3166-2~iso-4217~iso-639.f37affc4.js  iso-3166-1~iso-3166-2~iso-4217~iso-639.f37affc4.js.map  iso-3166-2.40b748b9.js  iso-3166-2.40b748b9.js.map  iso-3166-2.b2b6d745.js  iso-3166-2.b2b6d745.js.map  iso-4217.d7b0ac96.js  iso-4217.d7b0ac96.js.map  iso-4217.e3ef7ebc.js  iso-4217.e3ef7ebc.js.map  iso-639.cb6d2949.js  iso-639.cb6d2949.js.map  iso-639.ee37d217.js  iso-639.ee37d217.js.map
riso-3166/: Cargo.toml
riso-3166/benches/: country.rs  subdivision.rs
riso-3166/src/: continent.rs  country.rs  lib.rs  subdivision.rs
riso-3166/src/continent/: code.rs  data.rs
riso-3166/src/country/: alpha2.rs  alpha3.rs  data.rs  data_details.rs  detail.rs  numeric.rs  tld.rs
riso-3166/src/subdivision/: code.rs  data.rs
riso-3166/tests/: country.rs  features.rs  serde.rs  serde_deseralize.rs  subdivision.rs
riso-3166/tests/features/: country_details.rs  subdivision.rs
riso-4217/: Cargo.toml
riso-4217/src/: Currency.rs  lib.rs
riso-4217/src/currency/: Code.rs  Numeric.rs  code.rs  data.rs
riso-4217/tests/: currency.rs  serde.rs
riso-639/: Cargo.toml
riso-639/src/: language.rs  lib.rs
riso-639/src/language/: alpha2.rs  alpha3.rs  data.rs
riso-639/tests/: features.rs  language.rs  serde.rs
riso-639/tests/features/: country_details.rs
riso-site/: .eslintignore  README.md  package-lock.json  package.json  svelte.config.js  vue.config.js
riso-site/public/: index.html
riso-site/src/: .eslintignore  App.vue  main.js
riso-site/src/components/: CountryDropdown.vue  CountryFlag.vue  LayoutHeader.vue  SubdivisionParentDropdown.vue
riso-site/src/lib/: riso.ts
riso-site/src/lib/components/: CountryFlag.svelte  CurrencySymbol.svelte
riso-site/src/lib/css/: global.css
riso-site/src/lib/stores/: Iso3166Cache.ts
riso-site/src/router/: index.js
riso-site/src/routes/: __layout.svelte  about.svelte  index.svelte
riso-site/src/routes/iso-3166-1/: index.svelte
riso-site/src/routes/iso-3166-2/: index.svelte
riso-site/src/routes/iso-4217/: index.svelte
riso-site/src/routes/iso-639/: index.svelte
riso-site/src/views/: Home.vue  iso-3166-1.vue  iso-3166-2.vue  iso-4217.vue  iso-639.vue
riso-static-traits/: Cargo.toml
riso-static-traits/src/: lib.rs
riso-wasm/: Cargo.toml  LICENSE_MIT
riso-wasm/src/: lib.rs
static-traits/: Cargo.toml
workspace-utils/: Cargo.toml
workspace-utils/src/: lib.rs
