[package]
name = "riso-3166"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

riso-static-traits =  { path = "../riso-static-traits" }
ureq = { version = "2.1", features = ["json", "charset"], optional = true }
workspace-utils =  { path = "../workspace-utils", optional = true }
grep-regex = { version = "0.1", optional = true }
grep-searcher = { version = "0.1", optional = true }
grep-matcher = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
country_currencies = []
country_details = []
subdivisions = []
updater = [
    "workspace-utils",
    "grep-regex",
    "grep-searcher",
    "grep-matcher",
    "ureq",
]

[[bin]]
name = "update-3166"
path = "src/bin/update-3166.rs"
required-features = ["updater"]

[[bin]]
name = "update-3166-details"
path = "src/bin/update-3166-details.rs"
required-features = ["updater"]
