[package]
name = "riso-4217"
version = "0.1.0"
edition = "2018"

[dependencies]

serde = "1.0"

riso-3166 = { path = "../riso-3166" }
static-traits =  { path = "../static-traits" }

scraper = { version = "0.12", optional = true }
serde_derive = { version = "1.0", optional = true }
serde-xml-rs = { version = "0.5", optional = true }
ureq = { version = "2.1", features = ["json", "charset"], optional = true }
workspace-utils =  { path = "../workspace-utils", optional = true }
grep-regex = { version = "0.1", optional = true }
grep-searcher = { version = "0.1", optional = true }
grep-matcher = { version = "0.1", optional = true }

[features]
default = []
updater = [
    "workspace-utils",
    "grep-regex",
    "grep-searcher",
    "grep-matcher",
    "ureq",
    "serde-xml-rs",
    "serde_derive",
    "scraper",
]

[[bin]]
name = "update-4217"
path = "src/bin/update-4217.rs"
required-features = ["updater"]
